[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xyb"
version = "0.4.12"
description = "Oncology patient document organizer - turn any folder of medical documents into a queryable knowledge graph for tumor patients"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["oncology", "tumor", "medical-records", "knowledge-graph", "dicom", "patient-portal", "xiaoyibao", "mcp"]
requires-python = ">=3.10"
dependencies = [
    "networkx",
    "pydicom",
    "Pillow",
    "pypdf",
]

[project.urls]
Homepage = "https://github.com/PancrePal-xiaoyibao/llm-wiki-pancrepal-graphify"
Repository = "https://github.com/PancrePal-xiaoyibao/llm-wiki-pancrepal-graphify"
Issues = "https://github.com/PancrePal-xiaoyibao/llm-wiki-pancrepal-graphify/issues"

[project.optional-dependencies]
mcp = ["mcp"]
neo4j = ["neo4j"]
pdf = ["pypdf"]
watch = ["watchdog"]
svg = ["matplotlib"]
leiden = ["graspologic; python_version < '3.13'"]
office = ["python-docx", "openpyxl"]
video = ["faster-whisper", "yt-dlp"]
all = ["mcp", "neo4j", "pypdf", "watchdog", "graspologic; python_version < '3.13'", "python-docx", "openpyxl", "matplotlib"]

[project.scripts]
xyb = "xyb.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["xyb*"]

[tool.setuptools.package-data]
xyb = ["skill.md"]
