[tool.poetry]
name = "xiaoyibao"
version = "4.0.0"
description = "胰腺癌智能管理平台 - 基于知识图谱的个性化病情管理"
authors = ["PancrePal <pancrepal@xiaoyibao.org>", "Safi Shamsi <safishamsi@xiaoyibao.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/PancrePal-xiaoyibao/llm-wiki-pancrepal-graphify"
repository = "https://github.com/PancrePal-xiaoyibao/llm-wiki-pancrepal-graphify"
documentation = "https://github.com/PancrePal-xiaoyibao/llm-wiki-pancrepal-graphify#readme"
keywords = ["pancreatic-cancer", "knowledge-graph", "medical-ai", "mcp", "healthcare"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0"
python-docx = "^1.1"
pymupdf = "^1.24"
pydicom = "^2.4"
spacy = "^3.7"
scikit-learn = "^1.3"
networkx = "^3.2"
plotly = "^5.18"
pandas = "^2.1"
reportlab = "^4.0"
jinja2 = "^3.1"
markdown = "^3.5"
mcp = {extras = ["cli"], version = "^1.0"}
httpx = "^0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
black = "^24.1"
ruff = "^0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# CLI 入口：xyb
[tool.poetry.scripts]
xyb = "xyb.__main__:main"
